--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .idea
 venv
 *.pyc
+MainBot/*.pyc
+Maps_Paths/*.pyc
+Utilities/*.pyc
+MainBot/__pycache/
+Maps_Paths/__pycache/
+Utilities/__pycache__/
