updated .gitignore to include cache files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .idea
 venv
 *.pyc
+MainBot/*.pyc
+Maps_Paths/*.pyc
+Utilities/*.pyc
+MainBot/__pycache__/
+Maps_Paths/__pycache__/
+Utilities/__pycache__/
